--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,71 @@
 @import "tailwindcss";
 
-.container::-webkit-scrollbar {
-    display: none;
+/* image list */
+.list-title {
+    font-size: 14px;
+    font-weight: bold;
+    min-width: 11%;
 }
 
-.container {
-    -ms-overflow-style: none; /* IE and 엣지 */
-    scrollbar-width: none; /* 파이어폭스 */
+.list-contents {
+    font-size: 14px;
+    min-width: 11%;
+}
+
+/* table */
+.text-overflow {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    word-break: break-word;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.table-title {
+    width: 10%;
+}
+
+.font-sm {
+    font-size: 13px;
+}
+
+/* antd custom css */
+:where(.css-dev-only-do-not-override-pjilya).ant-table-wrapper
+    .ant-table-ping-right:not(.ant-table-has-fix-right)
+    .ant-table-container::after {
+    box-shadow: none;
+}
+:where(.css-dev-only-do-not-override-pjilya).ant-table-wrapper
+    .ant-table-ping-left:not(.ant-table-has-fix-left)
+    .ant-table-container::before {
+    box-shadow: none;
+}
+:where(.css-dev-only-do-not-override-pjilya).ant-table-wrapper
+    .ant-table-pagination.ant-pagination {
+    margin: 30px 0 20px 0;
+}
+:where(.css-dev-only-do-not-override-pjilya).ant-pagination
+    .ant-pagination-options {
+    display: none;
+}
+:where(.css-dev-only-do-not-override-pjilya).ant-table-wrapper .ant-table-row {
+    cursor: pointer;
+}
+:where(.css-dev-only-do-not-override-pjilya).ant-table-wrapper
+    table
+    .ant-table-expanded-row
+    .ant-table-cell
+    ul
+    li:last-child {
+    border: none;
+}
+:where(.css-dev-only-do-not-override-pjilya).ant-table-wrapper
+    table
+    .ant-table-expanded-row
+    .ant-table-cell
+    ul
+    li:first-child {
+    padding-top: 0;
 }
