--- a/app/globals.css
+++ b/app/globals.css
@@ -13,21 +13,15 @@
 }
 
 /* table */
-.text-overflow {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    word-break: break-word;
-
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-}
-
 .table-title {
     width: 10%;
 }
 
 .font-sm {
+    font-size: 12px;
+}
+
+.font-base {
     font-size: 13px;
 }
 
@@ -68,4 +62,17 @@
     ul
     li:first-child {
     padding-top: 0;
+}
+:where(.css-dev-only-do-not-override-pjilya).ant-table-wrapper .ant-table-cell,
+:where(.css-dev-only-do-not-override-pjilya).ant-table-wrapper
+    .ant-table-thead
+    > tr
+    > th {
+    padding: 12px 12px;
+}
+:where(.css-dev-only-do-not-override-pjilya).ant-table-wrapper
+    .ant-table-tbody
+    > tr
+    > td {
+    padding: 12px 12px;
 }
